--- a/src/app/auth/sign-up/sign-up.component.scss
+++ b/src/app/auth/sign-up/sign-up.component.scss
@@ -5,6 +5,7 @@
     #register {
         width: 100%;
         height: 100%;
+        overflow: scroll;
         background: url('~src/assets/images/backgrounds/dark-material-bg.jpg') no-repeat;
         background-size: cover;
 
