--- a/src/scss/partials/_global.scss
+++ b/src/scss/partials/_global.scss
@@ -8,7 +8,6 @@ body {
     min-height: 100%;
     margin: 0;
     padding: 0;
-    overflow: hidden;
     background: #F5F5F5;
 }
 
@@ -21,4 +20,8 @@ body {
 
         @include mat-elevation(8);
     }
+}
+
+.hovered {
+  cursor:pointer;
 }
