--- a/src/scss/partials/_angular-material-fix.scss
+++ b/src/scss/partials/_angular-material-fix.scss
@@ -95,3 +95,7 @@ mat-chip {
 .mat-card-image {
     max-width: none !important;
 }
+
+.mat-sidenav-container, .mat-sidenav-content, .mat-tab-body-content {
+  transform: none !important;
+}
