--- a/src/app/realty/realty-list.component.html
+++ b/src/app/realty/realty-list.component.html
@@ -26,14 +26,21 @@
       <form [formGroup]="searchForm">
         <div class="form-control" fxLayout="row" fxLayoutAlign="space-between center">
           <span>Rooms count: </span>
-          <mat-form-field fxFlex="75" fxFlex.lt-sm="100" fxLayoutAlign = "center" fxLayout="row" >
-            <input matInput type="number" formControlName="rooms" >
+          <mat-form-field fxFlex="60" fxFlex.lt-sm="100" fxLayoutAlign = "center" fxLayout="column" >
+            <mat-select formControlName="rooms" placeholder="Select rooms count">
+              <mat-option >None</mat-option>
+              <mat-option [value]="1">1</mat-option>
+              <mat-option [value]="2">2</mat-option>
+              <mat-option [value]="3">3</mat-option>
+              <mat-option [value]="4">4</mat-option>
+              <mat-option [value]="5">5</mat-option>
+            </mat-select>
           </mat-form-field>
         </div>
         <div class="form-control" fxLayout="row" fxLayoutAlign="space-between center">
           <span>Price: </span>
-          <mat-form-field fxFlex="75" fxFlex.lt-sm="100" fxLayoutAlign = "center" fxLayout="row" >
-            <input matInput type="number" formControlName="price" >
+          <mat-form-field fxFlex="60" fxFlex.lt-sm="100" fxLayoutAlign = "center" fxLayout="column" >
+            <input matInput type="number" min="1" max="10000000" formControlName="price" >
           </mat-form-field>
         </div>
         <div class="form-control mb-20" fxLayout="row" fxLayoutAlign="space-around center">
