--- a/src/app/realty/realty-list.component.scss
+++ b/src/app/realty/realty-list.component.scss
@@ -30,6 +30,10 @@
     padding-left: 20px;
   }
 
+  .mat-form-field-wrapper{
+    width: 100%;
+  }
+
   @media only screen and (max-width: 768px){
     .realty-filter{
       display: none!important;
