--- a/src/app/realty/realty-details/realty-details.component.scss
+++ b/src/app/realty/realty-details/realty-details.component.scss
@@ -2,6 +2,77 @@ input.browse-btn{
   visibility: hidden;
 }
 
+.realty-header{
+  height: 75px!important;
+}
+
+.realty-property{
+  margin-bottom: 15px !important;
+  font-size: 16px;
+}
+
+.realty-info{
+  padding-right: 20px;
+  padding-left: 20px;
+  .description-header{
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 10px;
+  }
+  .description{
+    font-size: 18px;
+    margin-bottom: 30px;
+  }
+}
+
+.realty-details {
+  padding-right: 20px;
+  padding-left: 20px;
+  div{
+    display: inline-block;
+    margin-bottom: 20px;
+    width: 100%;
+  }
+  .title {
+    font-size: 50px;
+    word-wrap: break-word
+  }
+
+  .price{
+    color:#3c9806;
+    font-weight: bold;
+    font-size: 30px;
+  }
+
+  .area{
+    font-weight: bold;
+    font-size: 24px;
+  }
+
+  .property-header{
+    font-weight: bold;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .realty-details {
+    .title {
+      font-size: 40px;
+    }
+
+    .price{
+      font-size: 24px;
+    }
+
+    .area{
+      font-size: 18px;
+    }
+    .realty-property{
+      font-size: 14px;
+    }
+
+  }
+}
 
 
 
