--- a/src/app/realty/realty-list.component.html
+++ b/src/app/realty/realty-list.component.html
@@ -1,6 +1,7 @@
 <div id="realty-list">
   <div class="header mat-primary-bg p-24 h-100" fxLayout="row" fxLayoutAlign="space-between center" >
     <div class="h2 mt-16">Realty</div>
+    <mat-icon color="white" class="hovered" routerLink="/realty/add">add</mat-icon>
   </div>
   <div fxLayoutAlign="space-between">
     <div class="realty-container" fxLayout="row wrap" class="card"  fxLayoutAlign.xs="center" fxLayoutAlign="space-around">
