--- a/src/app/profile/tabs/about/about.component.scss
+++ b/src/app/profile/tabs/about/about.component.scss
@@ -87,6 +87,7 @@
                 }
             }
         }
+
     }
 
     // Profile boxes
@@ -138,4 +139,14 @@
             }
         }
     }
+}
+
+@media only screen and (max-width: 768px) {
+  #about {
+    padding: 0 !important;
+
+    .profile-box {
+      margin-bottom: 0 !important;
+    }
+  }
 }
