--- a/src/scss/core.scss
+++ b/src/scss/core.scss
@@ -40,4 +40,6 @@
 
 $fa-font-path : '~node_modules/font-awesome/fonts';
 @import '~node_modules/font-awesome/scss/font-awesome';
+@import "~angular-notifier/styles/core";
+@import "~angular-notifier/styles";
 
